Z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ a:hover {
 	position: relative;
 	padding-top: 60px;
 }
+.marketing {
+	background: white;
+	z-index: 4;
+	position: relative;
+}
 .row {
 	margin-left: 0;
 	margin-right: 0;
